objects/Swls_Survey__c.object
<CustomObject>
    <description>for marketing cloud</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SWLSs</relationshipLabel>
        <relationshipName>Swls_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>created for marketing cloud</description>
        <inlineHelpText>created for marketing cloud</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>I_am_satisfied_with_my_life__c</fullName>
        <description>I am satisfied with my life.</description>
        <inlineHelpText>I am satisfied with my life.</inlineHelpText>
        <label>SWLS_v1.0.3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_have_gotten_important_things_in_life__c</fullName>
        <description>So far, I have gotten the important things I want in life.</description>
        <inlineHelpText>So far, I have gotten the important things I want in life.</inlineHelpText>
        <label>SWLS_v1.0.4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_I_live_my_life_over_I_change_nothing__c</fullName>
        <description>If I could live my life over, I would change almost nothing.</description>
        <inlineHelpText>If I could live my life over, I would change almost nothing.</inlineHelpText>
        <label>SWLS_v1.0.5</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_most_ways_my_life_is_close_to_my_idea__c</fullName>
        <description>In most ways my life is close to my ideal.</description>
        <inlineHelpText>In most ways my life is close to my ideal.</inlineHelpText>
        <label>SWLS_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>The_conditions_of_my_life_are_excellent__c</fullName>
        <description>The conditions of my life are excellent.</description>
        <inlineHelpText>The conditions of my life are excellent.</inlineHelpText>
        <label>SWLS_v1.0.2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SWLS</label>
    <nameField>
        <displayFormat>SWLS-{0000000000}</displayFormat>
        <label>SWLS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWLSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>